# mockall-wrap

./: Cargo.toml  README.md  test.rs
src/: lib.rs
tests/: mod.rs
